# git-hackme

./: Cargo.toml  Readme.md
.github/workflows/: ci.yml
docs/: Server.md
src/: cli.rs  configuration.rs  main.rs  project.rs  template.rs
template/: autorized_keys  index.html  index.js  key-ssh_config  ssh_config  style.css
