[package]
name = "git-now"
version = "0.0.0"
edition = "2021"

[dependencies]
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2"

[target.'cfg(any(target_os = "macos", target_os = "ios", unix))'.dependencies]
# The most scary part since these dependencies use *lots* of unsafe to interact
# with the machine through `libc` etc. The explicit scoping to Unix and Windows
# in this case makes sure that no even scarier dependencies on `dlopen2` are
# introduced.
netdev = "0.25"
