[package]
name = "git-hackme"
version = "1.0.0-beta.3"
edition = "2021"
rust-version = "1.78"

license = "EUPL-1.2"
description = "Spontaneously host a local git repository for collaboration, use with mob."
repository = "https://github.com/HeroicKatora/git-hackme"
keywords = ["git", "hackerspace", "collaboration", "mob"]
categories = ["command-line-utilities", "development-tools"]
readme = "Readme.md"

[dependencies]
base64 = "0.22"
bip39-lexical-data = "1"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2"
ureq = { version = "2", default-features = false, features = [] }
url = "2"
which = "6"
whoami = "1.5"

[target.'cfg(any(target_os = "macos", target_os = "ios", unix))'.dependencies]
# The most scary part since these dependencies use *lots* of unsafe to interact
# with the machine through `libc` etc. The explicit scoping to Unix and Windows
# in this case makes sure that no even scarier dependencies on `dlopen2` are
# introduced.
netdev = "0.25"
